Added Unit tests and Blanket Services

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,17 @@ repositories {
 
 
 dependencies {
+
 	implementation('org.springframework.boot:spring-boot-starter')
-	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	//web
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'io.springfox:springfox-swagger2:2.8.0'
+	implementation 'io.springfox:springfox-swagger-ui:2.8.0'
+	implementation 'io.swagger:swagger-annotations:1.5.10'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testCompile 'org.springframework:spring-test'
+	//other
+	compileOnly 'org.projectlombok:lombok:1.18.2'
+
 }
