--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,1 +1,13 @@
 spring.application.name: account-service
+
+---
+spring:
+  profiles : test
+  datasource:
+    driverClassName: org.h2.Driver
+    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=true;
+    username: sa
+    password: sa
+  jpa:
+    hibernate.ddl-auto: update
+    show_sql: true
